<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#BFCBFB"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/guideline"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/dark_background"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="12dp"
        android:fontFamily="@font/montserrat_bold"
        android:hint="@string/enter_your_password"
        android:maxLength="99"
        android:paddingHorizontal="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/layoutResult"
        app:layout_constraintTop_toTopOf="@id/guideline"
        tools:ignore="Autofill,TextFields" />
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutResult"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/dark_background"
        app:layout_constraintTop_toBottomOf="@id/etPassword">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvStatus"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/password_status"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvResult"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="just for test"
            app:layout_constraintTop_toBottomOf="@id/tvStatus"/>


        <FrameLayout
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:id="@+id/line"
            android:layout_marginStart="30dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/tvLength"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hasLowerCase"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hasLowerCase"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/haslowercase"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_error"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/tvResult"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hasUpperCase"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/hasuppercase"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_error"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/hasLowerCase"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hasSymbol"
            android:layout_marginStart="14dp"
            android:layout_marginTop="15dp"
            android:drawablePadding="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/hassymbol"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_error"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/hasUpperCase"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvLength"
            android:layout_marginStart="14dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="35dp"
            android:fontFamily="@font/montserrat_bold"
            android:maxLength="2"
            android:text="@string/_00"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/line"
            app:layout_constraintTop_toBottomOf="@id/hasSymbol"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Length"
            android:layout_marginStart="5dp"
            android:layout_marginTop="11dp"
            android:drawablePadding="5dp"
            app:layout_constraintBottom_toBottomOf="@id/tvLength"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:text="@string/length"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/tvLength"
            app:layout_constraintTop_toBottomOf="@id/hasSymbol"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>












